--- a/templates/home.html
+++ b/templates/home.html
@@ -5,20 +5,19 @@
 {% block content %}
 
     <div class = "container">
-    {% for content in homePageContents %}
-    <div class = "card border-0">
-        <div class="card-body">
-            <h5 class="card-title"> {{content["Title"]}}
-                <button type="button" class="btn btn-link btn-lg float-right"><a href = {{content["Link"]}}> {{content["Action"]}}</a></button>
-                 </h5>
-            <p class="card-text">{{ content["Text"] }}</p>            
-
+        <!-- Try to seperate content from html: write home page content in homePageContents -->
+        {% for content in homePageContents %}
+        <div class = "card border-0">
+            <div class="card-body">
+                <h5 class="card-title"> {{content["Title"]}}
+                    <button type="button" class="btn btn-link btn-lg float-right"><a href = {{content["Link"]}}> {{content["Action"]}}</a></button>
+                    </h5>
+                <p class="card-text">{{ content["Text"] }}</p>            
+            </div>
+            <img class="card-img-bottom " src={{content["imagePath"] }} alt="Card image cap">
+            <hr>
         </div>
-        <img class="card-img-bottom " src={{content["imagePath"] }} alt="Card image cap">
-        <hr>
-
-    </div>
-    {% endfor %}
+        {% endfor %}
     </div>
 
 {% endblock %}
