--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,6 @@
   </head>
 
   <body>
-    <header>
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Computational Art Studio</a>
         <button
@@ -44,18 +43,25 @@
           </ul>
         </div>
       </nav>
-    </header>
+      <div class="jumbotron" style = "background-image:url({{jumbotron.bg_image}})">
+        <h1 class="display-4">{{jumbotron.header}}</h1>
+        <p class = "lead">{{jumbotron.text}} </p>
+        <p class = "lead">P.S. We keep the photo in our storage.</p>
 
-    <div class="jumbotron " 
-    style = "background-image:linear-gradient(to bottom,
-   rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.9) 100% ),url({{jumbotron.bg_image}})">
+        <hr class="my-4">
+        <p>Stay at home and have fun!</p>
+      </div>
+
+    <!-- <div class="jumbotron h-25" 
+    style = "background-image:url({{jumbotron.bg_image}})">
+        
         <h1 class="display-4">{{jumbotron.header}}</h1>
         <p class = "lead">{{jumbotron.text}}  </p>
         <hr class="my-4">
-        <h5>Have fun!</h5>
+        <h5></h5>
         <p class="card-text"><small class="text-muted align-text-bottom"></small></p>
     </div>
-    
+     -->
     <!-- Cooperator just need to update the following part based on aggreement on base.html -->
     <div id="content">
       {% block content %}{% endblock %}
@@ -66,6 +72,6 @@
   </body>
 
   <div class = "fixed-bottom">
-    <p class="text-center">@Computational Art Studio since 2020</p>
+    <p class="text-center">@Computational Art Studio since 2020.</p>
   </div>
 </html>
